<resources>
    <string name="app_name">NviroPoint</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCg6Ln-SKexcz-EnkmwEFiWYEKNb8G5f6c</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="forecast">Forecast</string>
    <string name="map">Map</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="error">Error</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind">Wind</string>
    <string name="team_60">Team 60%</string>
    <string name="created_by">Created By</string>
    <string name="information">Information</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="weather_condition">Weather Condition</string>
</resources>
