<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/appName"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/map"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/forecast"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:textColor="#ffffff"
            android:text="@string/events"
            android:textSize="13sp"
            android:id="@+id/events"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/settings"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/sign_up"
            android:id="@+id/signup"
            android:textColor="#ffffff"
            android:textSize="13sp"/>
        <!--<menu>
            <item
                android:id="@+id/change_city"
                android:orderInCategory="1"
                android:title="@string/change_city"
                app:showAsAction="never"/>
        </menu>-->


    </LinearLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtResponse"
            android:layout_width="372dp"
            android:layout_height="502dp"
            android:layout_marginTop="40dp"
            android:padding="20dp" />

    </FrameLayout>
</LinearLayout>