<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Application.ForecastFragment"
    android:id="@+id/forecastfragment">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@color/secondaryColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainContainer"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/addressContainer"
                android:gravity="center"
                android:background="@color/secondaryLightColor"
                android:padding="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_field"
                    android:textAppearance= "?android:textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="@color/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updated_field"
                    android:textSize="13sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/secondaryTextColor"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:id="@+id/aSpacer"
                android:layout_below="@+id/addressContainer"/>
            <ImageView
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/weather_icon"
                android:src="@drawable/ic_sunny"
                android:padding="4dp"
                android:layout_below="@+id/aSpacer"
                android:contentDescription="@string/weather_condition"
                android:tint="@color/secondaryLightColor"/>
            <Space
                android:layout_height="15sp"
                android:layout_width="match_parent"
                android:layout_below="@id/weather_icon"
                android:id="@+id/spacer"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overviewContainer"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_below="@+id/spacer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/current_temperature"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="30sp"
                    android:text="@string/error"
                    android:layout_gravity="center"
                    android:textColor="@color/secondaryTextColor"
                    android:padding="8dp"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:layout_below="@id/overviewContainer"
                android:id="@+id/anotherSpacer"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_below="@+id/anotherSpacer"
                android:textSize="20sp"
                android:textColor="@color/secondaryTextColor"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:layout_below="@id/description"
                android:id="@+id/Spacer"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/detailsContainer"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/Spacer">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:background="@color/secondaryLightColor"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_pressure"
                            android:tint="@color/secondaryTextColor"
                            android:contentDescription="@string/pressure"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/pressure"
                            android:textColor="@color/secondaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/error"
                            android:textColor="@color/secondaryTextColor"
                            android:id="@+id/pressure"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp"
                        android:gravity="center"
                        android:background="@color/secondaryLightColor">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_action_name"
                            android:tint="@color/secondaryTextColor"
                            android:contentDescription="@string/humidity"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/humidity"
                            android:textColor="@color/secondaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/error"
                            android:id="@+id/humidity"
                            android:textColor="@color/secondaryTextColor"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="4dp"
                        android:background="@color/secondaryLightColor">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_info"
                            android:tint="@color/secondaryTextColor"
                            android:contentDescription="@string/information"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/created_by"
                            android:textColor="@color/secondaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about"
                            android:textSize="15sp"
                            android:text="@string/team_60"
                            android:textColor="@color/secondaryTextColor"/>
                    </LinearLayout>
                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:id="@+id/oneSpacer"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="4dp"
                        android:background="@color/secondaryLightColor">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:tint="@color/secondaryTextColor"
                            android:contentDescription="@string/wind"
                            android:src="@drawable/ic_wind"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/wind_speed"
                            android:textColor="@color/secondaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/error"
                            android:id="@+id/windspeed"
                            android:textColor="@color/secondaryTextColor"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="4dp"
                        android:background="@color/secondaryLightColor"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:tint="@color/secondaryTextColor"
                            android:contentDescription="@string/wind_direction"
                            android:src="@drawable/ic_direction"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/wind_direction"
                            android:textColor="@color/secondaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/error"
                            android:id="@+id/winddirection"
                            android:textColor="@color/secondaryTextColor"/>

                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="4dp"
                        android:background="@color/secondaryLightColor"
                        android:orientation="vertical">

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loader"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorText"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:text="@string/something_went_wrong"/>
    </RelativeLayout>

</FrameLayout>